Refactor @Entity to have a common BaseEntity @MappedSuperclass
Co-authored-by: 3755625+liccioni@users.noreply.github.com