@@ -8,7 +8,6 @@ import lombok.Setter;
 import lombok.experimental.Accessors;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -27,7 +26,7 @@ public class StudentResponse
         studentResponse.setCourses(student.getRegistrations().stream()
                 .map(StudentRegistration::getCourse)
                 .map(c -> new CourseResponse().setName(c.getName()))
-                .collect(Collectors.toList()));
+                .toList());
 
         return studentResponse;
     }
