@@ -13,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 public class StudentService
@@ -48,7 +47,7 @@ public class StudentService
                         courseRepository,
                         registrationRequest.getCourseNames()).stream()
                 .map(course -> new StudentRegistration().setCourse(course).setStudent(student))
-                .collect(Collectors.toList());
+                .toList();
         student.setRegistrations(registrations);
 
         //List<Phone> phones = findOrCreatePhones(registrationRequest.getPhoneNumbers());
